--- a/apply.html
+++ b/apply.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Recruitment Flow</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <!-- Theme Toggle -->
@@ -58,4 +58,5 @@
     });
   </script>
 </body>
+
 </html>
