--- a/apply.html
+++ b/apply.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Recruitment Flow</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Theme Toggle -->
@@ -60,3 +60,4 @@
 </body>
 
 </html>
+
