--- a/apply.html
+++ b/apply.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Recruitment Flow</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <!-- Theme Toggle -->
@@ -49,8 +49,8 @@
     <button onclick="location.href='index.html'" class="btn-secondary">Back to Home</button>
   </section>
 
-  <script src="script.js"></script>
-  <script src="quiz.js"></script>
+  <script src="./script.js"></script>
+  <script src="./quiz.js"></script>
   <script>
     document.getElementById("themeToggle").addEventListener("click", () => {
       document.body.classList.toggle("dark");
@@ -59,5 +59,6 @@
 </body>
 
 </html>
+
 
 
