Add external script references in index.html
Added external script references for script.js and quiz.js.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
     <button class="btn-footer" onclick="location.href='apply.html'">Apply Now</button>
   </footer>
 
+  <script src="./script.js"></script>
+  <script src="./quiz.js"></script>
   <script>
   document.getElementById("themeToggle").addEventListener("click", () => {
     document.body.classList.toggle("dark");
@@ -67,5 +69,6 @@
 </body>
 
 </html>
+
 
 
