--- a/apply.html
+++ b/apply.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Recruitment Flow</title>
-  <link rel="stylesheet" href="./style.css">
+<style> <link rel="stylesheet" href="./style.css"></style> 
 </head>
 <body>
   <!-- Theme Toggle -->
@@ -59,6 +59,7 @@
 </body>
 
 </html>
+
 
 
 
