--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>QCG Recruitment Portal</title>
-  <style><link rel="stylesheet" href="./style.css"></style>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -69,6 +69,7 @@
 </body>
 
 </html>
+
 
 
 
